FACES-1951 Please consider these components for the showcase.

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -29,3 +29,8 @@ alloy_selectOneRadio=general:selectOneRadio.xhtml,SelectOneModelBean.java,Select
 alloy_selectStarRating=general:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|data-model:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|default-value:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|instant-ajax:selectStarRating.xhtml,SelectStarRatingModelBean.java
 alloy_selectThumbRating=general:selectThumbRating.xhtml,SelectThumbRatingModelBean.java,SelectThumbRatingBackingBean.java|instant-ajax:selectThumbRating.xhtml,SelectThumbRatingModelBean.java,SelectThumbRatingBackingBean.java
 alloy_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
+alloy_outputFormat=general:outputFormat.xhtml
+alloy_outputLabel=general:outputLabel.xhtml
+alloy_outputLink=general:outputLink.xhtml,OutputLinkModelBean.java|conversion:outputLink.xhtml,OutputLinkModelBean.java
+alloy_link=general:link.xhtml,LinkModelBean.java|navigation:link.xhtml,navigation-rule.xml,LinkModelBean.java|param:link.xhtml,LinkModelBean.java
+alloy_commandLink=general:commandLink.xhtml|immediate:commandLink.xhtml,CommandLinkBackingBean.java|navigation:commandLink.xhtml,navigation-rule.xml|param:commandLink.xhtml
