--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -13,13 +13,20 @@ alloy-button-various-styles=The component can be *styled* with Bootstrap class n
 alloy-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.CommandButton] is a [javadoc:javax.faces.component.UICommand] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:commandButton:type] is `submit`. Since it extends [javadoc:javax.faces.component.html.HtmlCommandButton], it supports all the features of [vdldoc:h:commandButton]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:alloy:commandButton:action] or [vdldoc:alloy:commandButton:actionListener].
 alloy-commandbutton-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:commandButton:image] and [vdldoc:alloy:commandButton:value] attributes can be specified for styling purposes.
 alloy-commandbutton-general-example-1=Styling via children
-alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandbutton:image] attribute
-alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandbutton:value] attribute
+alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandButton:image] attribute
+alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandButton:value] attribute
 alloy-commandbutton-immediate=When the [vdldoc:alloy:commandButton:immediate] attribute is `true`, the [vdldoc:alloy:commandButton:action] and [vdldoc:alloy:commandButton:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
 alloy-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
+alloy-commandlink=[javadoc:com.liferay.faces.alloy.component.commandlink.CommandLink] is a [javadoc:javax.faces.component.UICommand] component that renders an HTML `&lt;a&gt;` element. Since it extends [javadoc:javax.faces.component.html.HtmlCommandLink], it supports all the features of [vdldoc:h:commandLink]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:alloy:commandLink:action] or [vdldoc:alloy:commandLink:actionListener].
+alloy-commandlink-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for visual purposes. Alternatively, the [vdldoc:alloy:commandLink:value] attribute can be specified.
+alloy-commandlink-general-example-1=Using children
+alloy-commandlink-general-example-2=Using the [vdldoc:alloy:commandLink:value] attribute
+alloy-commandlink-immediate=When the [vdldoc:alloy:commandLink:immediate] attribute is `true`, the [vdldoc:alloy:commandLink:action] and [vdldoc:alloy:commandLink:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
+alloy-commandlink-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandLink:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
+alloy-commandlink-param=URL *parameters* can be specified via the [vdldoc:alloy:commandLink:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay* by calling the JavaScript API. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -68,6 +75,12 @@ alloy-inputtextarea-size=The *size* of the rendered textarea can be specified vi
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-link=[javadoc:com.liferay.faces.alloy.component.link.Link] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlLink], it supports all the features of [vdldoc:h:link].
+alloy-link-general=There are two basic ways to adjust the display of an [vdldoc:alloy:link].
+alloy-link-general-example-1=Using the [vdldoc:alloy:link:value] attribute
+alloy-link-general-example-2=Using children
+alloy-link-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:link:outcome] attribute.
+alloy-link-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:alloy:link:includeViewParams] to `true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-message=[javadoc:com.liferay.faces.alloy.component.message.Message] is a [javadoc:javax.faces.component.UIMessage] component that renders a `&lt;span&gt;` element containing the text of a single [javadoc:javax.faces.application.FacesMessage] for an associated component. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
 alloy-message-general=The component can be *associated* with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
 alloy-message-general-example-1=Re-rendering [vdldoc:alloy:message] via [vdldoc:f:ajax]
@@ -76,6 +89,16 @@ alloy-messages-general=The component is typically placed inside an [vdldoc:alloy
 alloy-messages-general-example-1=Render *all* messages in a `&lt;ul&gt;` (the default)
 alloy-messages-general-example-2=Render *all* messages in a `&lt;table&gt;`
 alloy-messages-general-example-3=Render *only global* messages in a `&lt;ul&gt;`
+alloy-outputformat=[javadoc:com.liferay.faces.alloy.component.outputformat.OutputFormat] is a [javadoc:javax.faces.component.UIOutput] component that renders *parameterized* text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputFormat], it supports all the features of [vdldoc:h:outputFormat].
+alloy-outputformat-general=Use the [vdldoc:alloy:outputFormat:value] attribute and [vdldoc:f:param] children to populate the result.
+alloy-outputlabel=[javadoc:com.liferay.faces.alloy.component.outputlabel.OutputLabel] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value inside of an *HTML label element*. Since it extends [javadoc:javax.faces.component.html.HtmlOutputLabel], it supports all the features of [vdldoc:h:outputLabel].
+alloy-outputlabel-general=The [vdldoc:alloy:outputLabel:value] attribute can be internationalized.
+alloy-outputlink=[javadoc:com.liferay.faces.alloy.component.outputlink.OutputLink] is a [javadoc:javax.faces.component.UIOutput] component that renders an anchor element, where the [vdldoc:alloy:outputLink:value] attribute populates the href of the anchor. Since it extends [javadoc:javax.faces.component.html.HtmlOutputLink], it supports all the features of [vdldoc:h:outputLink].
+alloy-outputlink-general=There are 3 basic ways to adjust the display and the url of an [vdldoc:alloy:outputLink].
+alloy-outputlink-general-example-1=Using text children and the [vdldoc:alloy:outputLink:value] attribute
+alloy-outputlink-general-example-2=Using images
+alloy-outputlink-general-example-3=Add name=value pairs to the url with [vdldoc:f:param]
+alloy-outputlink-conversion=The [vdldoc:alloy:outputLink:value] attribute can be *converted* via the [vdldoc:alloy:outputLink:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:outputLink:converterMessage] attribute.
 alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
 alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:alloy:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
@@ -188,6 +211,7 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 cancel=Cancel
+choose-a-country=Choose a country:
 click-here-and-press-the-tab-key=Click here and press the TAB key
 click-here-to-show-the-dialog=Click here to show the dialog
 click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide=Click here to show the dialog and click outside the dialog to hide
@@ -229,6 +253,7 @@ large=Large
 last-name=Last Name
 like=Like
 link=Link
+link-to-a-map-of=Link to a map of
 locale-from-el=locale from EL
 localization=Localization
 max-length-events=Max Length Events
@@ -275,12 +300,14 @@ success=Success
 text-field=Text Field
 text-from-title-attribute=Text from title attribute
 text-from-value-attribute=Text from value attribute
+this-is-a-label-from-properties=This is a label from properties
 this-is-column-1=This is column 1 with width="33"
 this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
 this-is-some-popover-text=This is some popover text
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
+text-for-a-link=Text for a link
 text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
