FACES-1807 Develop alloy:inputHidden and alloy:inputSecret components FACES-1714 Develop Liferay Faces Showcase (added use cases for alloy:inputHidden and alloy:inputSecret)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -51,6 +51,18 @@ alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
+alloy-inputhidden=[javadoc:com.liferay.faces.alloy.component.inputhiddenarea.InputHidden] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with *type=*`hidden`. Since it extends [javadoc:javax.faces.component.html.HtmlInputHidden], it supports all the features of [vdldoc:h:inputHidden].
+alloy-inputhidden-validation=The [vdldoc:alloy:inputHidden:value] attribute can be *validated* via the [vdldoc:alloy:inputHidden:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputHidden:validatorMessage] attribute.
+alloy-inputhidden-immediate=When the [vdldoc:alloy:inputHidden:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-inputhidden-conversion=The [vdldoc:alloy:inputHidden:value] attribute can be *converted* via the [vdldoc:alloy:inputHidden:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputHidden:converterMessage] attribute.
+alloy-inputhidden-general=The [vdldoc:alloy:inputHidden:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputsecret=[javadoc:com.liferay.faces.alloy.component.inputsecretarea.InputSecret] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with *type=*`password`. Since it extends [javadoc:javax.faces.component.html.HtmlInputSecret], it supports all the features of [vdldoc:h:inputSecret].
+alloy-inputsecret-general=The [vdldoc:alloy:inputSecret:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputsecret-immediate=When the [vdldoc:alloy:inputSecret:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-inputsecret-redisplay=The [vdldoc:alloy:inputSecret:redisplay] attribute indicates whether or not the [vdldoc:alloy:inputSecret:value] attribute is rendered to the response. For example, if *redisplay* is `true` then the component would be rendered like the following:<br/><br/><code>&lt;input type="secret" value="myPlainTextPassword" /&gt;</code><br/><br/>Since this is a !potential security risk!, the *default value* of the *redisplay* attribute is `false`. However, this has the side-effect of the user having to re-enter a value when validation fails. In order to provide a better user experience, avoid using [vdldoc:f:ajax:render]=`@form` to update the DOM. 
+alloy-inputsecret-redisplay-example-1=Specifying [vdldoc:alloy:inputSecret:redisplay]=`false` (the default, which is secure) and re-rendering only specific components in the DOM
+alloy-inputsecret-redisplay-example-2=Specifying [vdldoc:alloy:inputSecret:redisplay]=`true` !(potential security risk)! and re-rendering the entire form in the DOM
+alloy-inputsecret-validation=The [vdldoc:alloy:inputSecret:value] attribute can be *validated* via the [vdldoc:alloy:inputSecret:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputSecret:validatorMessage] attribute.
 alloy-inputsourcecode=[javadoc:com.liferay.faces.alloy.component.aceeditor.InputSourceCode] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 alloy-inputsourcecode-default-value=A *default value* can specified using when the [vdldoc:alloy:inputSourceCode:value] attribute is bound via EL to a model bean property. In the example below, the default value of the `sourceText` property is set inside of the `InputSourceCodeModelBean.getSourceText()` method.
 alloy-inputsourcecode-general=The component supports *color-coded text* for various programming languages via the [vdldoc:alloy:inputSourceCode:mode] attribute.
@@ -58,7 +70,7 @@ alloy-inputtext=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTe
 alloy-inputtext-conversion=The [vdldoc:alloy:inputText:value] attribute can be *converted* via the [vdldoc:alloy:inputText:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:converterMessage] attribute.
 alloy-inputtext-general=The [vdldoc:alloy:inputText:value] attribute can be *bound to a model bean property* via EL.
 alloy-inputtext-immediate=When the [vdldoc:alloy:inputText:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
-alloy-inputtext-validation=The [vdldoc:alloy:inputText:value] attribute can be *validated* via the [vdldoc:alloy:inputText:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:validatorMessage] attribute.
+alloy-inputtext-validation=The [vdldoc:alloy:inputText:value] attribute can be *validated* via the [vdldoc:alloy:inputText:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:validatorMessage] attribute.
 alloy-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
 alloy-inputtextarea-conversion=The [vdldoc:alloy:inputTextarea:value] attribute can be *converted* via the [vdldoc:alloy:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:converterMessage] attribute.
 alloy-inputtextarea-general=The [vdldoc:alloy:inputTextarea:value] attribute can be *bound to a model bean property* via EL.
@@ -67,7 +79,7 @@ alloy-inputtextarea-right-to-left=The component supports *Right-To-Left* languag
 alloy-inputtextarea-size=The *size* of the rendered textarea can be specified via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes, or via CSS using the [vdldoc:alloy:inputTextarea:styleClass] or [vdldoc:alloy:inputTextarea:style] attributes.
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
-alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
 alloy-message=[javadoc:com.liferay.faces.alloy.component.message.Message] is a [javadoc:javax.faces.component.UIMessage] component that renders a `&lt;span&gt;` element containing the text of a single [javadoc:javax.faces.application.FacesMessage] for an associated component. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
 alloy-message-general=The component can be *associated* with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
 alloy-message-general-example-1=Re-rendering [vdldoc:alloy:message] via [vdldoc:f:ajax]
@@ -188,6 +200,7 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 cancel=Cancel
+clear-the-value-of-the-hidden-input=Clear the value of the hidden input
 click-here-and-press-the-tab-key=Click here and press the TAB key
 click-here-to-show-the-dialog=Click here to show the dialog
 click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide=Click here to show the dialog and click outside the dialog to hide
@@ -197,11 +210,16 @@ click-here-to-toggle-the-dialog=Click here to toggle the dialog
 click-here-to-toggle-the-popover-and-click-outside-the-popover-to-hide=Click here to toggle the popover and click outside the popover to hide
 column-width=Column Width
 column-offset=Column Offset
+copy-1234-to-the-value-of-the-hidden-input=Copy '1234' to the value of the hidden input
+copy-a-date-to-the-value-of-the-hidden-input=Copy a date to the value of the hidden input
+copy-a-valid-email-address-to-the-hidden-input=Copy a valid email address to the hidden input
+copy-an-invalid-email-address-to-the-hidden-input=Copy an invalid email address to the hidden input
 component=Component
 conversion=Conversion
 conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
 conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.Date] using an [vdldoc:f:convertDateTime] child tag
 converter-message=Failed to convert this field
+copy-into-the-hidden-input=Copy into the hidden input
 country=Country
 customers=Customers
 data-model=Data Model
@@ -219,6 +237,7 @@ fieldset-legend=Fieldset Legend
 first-name=First Name
 general=General
 header-text=Header Text
+hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
 i-agree-to-the-terms-of-the-license-agreement=I agree to the terms of the license agreement
@@ -245,6 +264,7 @@ note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issue
 note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
 param=Param
 parameter-value=Parameter Value
+password=Password
 please-consider-using=Please consider using
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
@@ -259,6 +279,7 @@ portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in ord
 position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
 rating=Rating
+redisplay=Redisplay
 rendered=Rendered
 required=Required
 required-message=This is a required field
@@ -275,6 +296,8 @@ success=Success
 text-field=Text Field
 text-from-title-attribute=Text from title attribute
 text-from-value-attribute=Text from value attribute
+the-hidden-input-is-not-rendered=The hidden input is not rendered
+this-is-a-div-that-contains-a-hidden-input=This is a div that contains a hidden input
 this-is-column-1=This is column 1 with width="33"
 this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
