--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,16 +1,23 @@
 alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
-alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandButtonBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandButtonModelBean.java,CommandButtonBackingBean.java,Customer.java
+alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
+alloy_commandLink=general:commandLink.xhtml|immediate:commandLink.xhtml,CommandBackingBean.java|navigation:commandLink.xhtml,navigation-rule.xml|param:commandLink.xhtml|value-attribute:commandLink.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
 alloy_dataTable=general:dataTable.xhtml,DataTableModelBean.java,DataTableBackingBean.java
-alloy_field=general:field.xhtml|message-styling:field.xhtml,FieldBackingBean.java
+alloy_field=general:field.xhtml,FieldBackingBean.java|message-styling:field.xhtml,FieldBackingBean.java
 alloy_fieldset=general:fieldset.xhtml
 alloy_dialog=general:dialog.xhtml,DialogModelBean.java,DialogBackingBean.java
 alloy_icon=general:icon.xhtml
 alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
+alloy_inputHidden=general:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|conversion:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|immediate:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|validation:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java
+alloy_inputSecret=general:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|immediate:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|redisplay:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|validation:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java
 alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
 alloy_inputText=general:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java
 alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml|size:inputTextarea.xhtml
+alloy_link=general:link.xhtml|navigation:link.xhtml,navigation-rule.xml|param:link.xhtml
 alloy_message=general:message.xhtml,MessageBackingBean.java
 alloy_messages=general:messages.xhtml,MessageBackingBean.java
+alloy_outputFormat=general:outputFormat.xhtml
+alloy_outputLabel=general:outputLabel.xhtml,FieldBackingBean.java
+alloy_outputLink=general:outputLink.xhtml|conversion:outputLink.xhtml,OutputLinkModelBean.java,CountryGmapConverter.java
 alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
 alloy_outputTooltip=general:outputTooltip.xhtml
@@ -29,5 +36,3 @@ alloy_selectOneRadio=general:selectOneRadio.xhtml,SelectOneModelBean.java,Select
 alloy_selectStarRating=general:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|data-model:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|default-value:selectStarRating.xhtml,SelectStarRatingModelBean.java,SelectStarRatingBackingBean.java|instant-ajax:selectStarRating.xhtml,SelectStarRatingModelBean.java
 alloy_selectThumbRating=general:selectThumbRating.xhtml,SelectThumbRatingModelBean.java,SelectThumbRatingBackingBean.java|instant-ajax:selectThumbRating.xhtml,SelectThumbRatingModelBean.java,SelectThumbRatingBackingBean.java
 alloy_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
-alloy_inputSecret=general:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|immediate:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|redisplay:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|validation:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java
-alloy_inputHidden=general:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|conversion:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|immediate:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|validation:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java
