FACES-1952 Develop alloy:graphicImage component (Please consider these components for the showcase.)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -6,6 +6,7 @@ alloy_field=general:field.xhtml,FieldBackingBean.java|message-styling:field.xhtm
 alloy_fieldset=general:fieldset.xhtml
 alloy_dialog=general:dialog.xhtml,DialogModelBean.java,DialogBackingBean.java
 alloy_icon=general:icon.xhtml
+alloy_image=general:image.xhtml
 alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
 alloy_inputHidden=general:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|conversion:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|immediate:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|validation:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java
 alloy_inputSecret=general:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|immediate:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|redisplay:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|validation:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java
