--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -47,6 +47,12 @@ alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is 
 alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
+alloy-image=[javadoc:com.liferay.faces.alloy.component.image.Image] is a [javadoc:javax.faces.component.UIGraphic] component that renders an *img* element. Since it extends [javadoc:javax.faces.component.html.HtmlGraphicImage], it supports all the features of [vdldoc:h:image].
+alloy-image-general=There are many ways to use an [vdldoc:alloy:image].
+alloy-image-general-example-1=Simply point the [vdldoc:alloy:image:value] attribute to an image
+alloy-image-general-example-2=Use the [vdldoc:alloy:image:library] and [vdldoc:alloy:image:name] attributes to specify the resource
+alloy-image-general-example-3=Let an expression language give you even more power
+alloy-image-general-example-4=Configure [vdldoc:alloy:image:usemap] and other attributes, and have fun with your resources
 alloy-input-date-benefits-description=since it combines date selection, text input, and automatic [javadoc:java.util.Date] conversion in a single component. The only advantage of using [vdldoc:alloy:pickDate] is that it can be *associated* with an [vdldoc:alloy:inputTextarea] in order to select *multiple dates*.
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
