FACES-1953 Develop alloy:accordion component (Please consider this component for the showcase.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -2,6 +2,12 @@ actionlistener-execution-when-immediate-is-false=ActionListener execution when [
 actionlistener-execution-when-immediate-is-true=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `true`
 agree=Agree
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
+alloy-accordion=[javadoc:com.liferay.faces.alloy.component.Accordion] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders child tabs either statically or dynamically.
+alloy-accordion-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:accordion:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:accordion:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-accordion-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
+alloy-accordion-general-example-1=When the [vdldoc:alloy:accordion:multiple] attribute is *false* (the default), only one &lt;div&gt; may be shown at a time.
+alloy-accordion-general-example-2=When the [vdldoc:alloy:accordion:multiple] attribute is *true*, the accordion does not close with each click, so multiple items can be viewed concurrently.
+alloy-accordion-javascript-api=The accordion can be manipulated by specifying a [vdldoc:alloy:accordion:clientKey] and calling the `expandAll()` JavaScript function.<br /><br />*JavaScript API:*<ul><li>`expandAll()` causes the accordion to show all items at once</li><li>`collapseAll()` causes the accordion hide all items</li></ul>
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
 alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
 alloy-button-general-example-1=Styling via children
@@ -237,6 +243,7 @@ click-here-to-toggle-the-dialog=Click here to toggle the dialog
 click-here-to-toggle-the-popover-and-click-outside-the-popover-to-hide=Click here to toggle the popover and click outside the popover to hide
 column-width=Column Width
 column-offset=Column Offset
+collapse=Collapse
 copy-1234-to-the-value-of-the-hidden-input=Copy '1234' to the value of the hidden input
 copy-a-date-to-the-value-of-the-hidden-input=Copy a date to the value of the hidden input
 copy-a-valid-email-address-to-the-hidden-input=Copy a valid email address to the hidden input
@@ -258,6 +265,7 @@ default-value=Default Value
 dislike=Dislike
 error=Error
 example=Example
+expand=Expand
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
