--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,3 +1,4 @@
+alloy_accordion=general:accordion.xhtml|data-model:accordion.xhtml,AccordionModelBean.java|javascript-api:accordion.xhtml,AccordionModelBean.java
 alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
 alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
 alloy_commandLink=general:commandLink.xhtml|immediate:commandLink.xhtml,CommandBackingBean.java|navigation:commandLink.xhtml,navigation-rule.xml|param:commandLink.xhtml|value-attribute:commandLink.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
