FACES-1714 Develop Liferay Faces Showcase (Changed PickDate documentation to specify UIComponent instead of UIPanel since PickDate extends UIComponent.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -138,7 +138,7 @@ alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGrou
 alloy-panelgroup-general=The [vdldoc:alloy:panelGroup:layout] attribute specifies whether the component renders a `span` or a `div`.
 alloy-panelgroup-general-example-1=By default, the component renders a `span`.
 alloy-panelgroup-general-example-2=Specifying `block` for the [vdldoc:alloy:panelGroup:layout] attribute causes the component to render a `div`.
-alloy-pickdate=[javadoc:com.liferay.faces.alloy.component.pickdate.PickDate] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
+alloy-pickdate=[javadoc:com.liferay.faces.alloy.component.pickdate.PickDate] is a [javadoc:javax.faces.component.UIComponent] that renders a popup a calendar with selectable dates.
 alloy-pickdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:pickDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-pickdate-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:pickDate:for] attribute.
 alloy-pickdate-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
