FACES-1955 Develop alloy:outputScript component FACES-1928 Remove compile-time dependency on portal-service.jar from Liferay Faces Alloy (Moved LiferayPortletUtil.java and LiferayThemeDisplayUtil.java to Util jar and modified them to avoid using reflection.)

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
